--- a/index.html
+++ b/index.html
@@ -2,36 +2,295 @@
 layout: default
 ---
 
-<div class="home">
-
-	<div class="jumbotron">
-		<div class="row">
-			<div class="col-md-5">
-				<h1 class="title"><span class="text-primary">K</span>evin <span class="text-primary">Mc</span>Carthy</h1>
-			</div>
-			<div class="col-md-7">
-				<p>{{site.description}}</p>
-				<p>
-					<a class="btn btn-info btn-lg" href="/portfolio" role="button">
-						<i class="fa fa-fw fa-file-text"></i> View my work
-					</a>
-				</p>
+<div class="container">
+	<div class="row">
+		<div class="col-md-5 col-md-push-7">
+			<div class="thumbnail">
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe src="https://www.youtube.com/embed/4ZJaKj2Qi1c" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+				</div>
 			</div>
 		</div>
+		<div class="col-md-7 col-md-pull-5">
+
+			<h2 class="">{{site.tagline}}</h2>
+
+			<p class="lead">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+
+		</div>
+	</div>
+</div>
+
+
+<div id="infoJumbo" class="jumbotron" >
+	
+	<div id="carousel-info-jumbo" class="carousel slide" data-ride="carousel">
+
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner" role="listbox">
+			<div id="item0" class="item active">
+				<div class="container">
+
+					<h1>Free</h1>
+					<div class="row">
+						<div class="col-xs-7">
+							<p class="lead">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							</p>
+							<a href="#" class="btn btn-warning btn-lg">Take Action</a>
+						</div>
+						<div class="col-xs-5">
+							<ul class="lead">
+								<li>Something</li>
+								<li>Something</li>
+								<li>Something</li>
+								<li>Something</li>
+								<li>Something</li>
+							</ul>
+						</div>
+					</div>
+
+					
+				</div>
+			</div>
+
+			<div id="item1" class="item">
+				<div class="container">
+					<h1>Basic</h1>
+					<div class="row">
+						<div class="col-xs-7">
+							<p class="lead">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							</p>
+							<a href="#" class="btn btn-primary btn-lg">Take Action</a>
+						</div>
+						<div class="col-xs-5">
+							<ul class="lead">
+								<li>Something</li>
+								<li>Something</li>
+								<li>Something</li>
+								<li>Something</li>
+								<li>Something</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div id="item2" class="item">
+				<div class="container">
+					<h1>Pro</h1>
+					<div class="row">
+						<div class="col-xs-7">
+							<p class="lead">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							</p>
+							<a href="#" class="btn btn-success btn-lg">Take Action</a>
+						</div>
+						<div class="col-xs-5">
+							<ul class="lead">
+								<li>Something</li>
+								<li>Something</li>
+								<li>Something</li>
+								<li>Something</li>
+								<li>Something</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+		<!-- Controls -->
+<!-- 		<a class="left" href="#carousel-info-jumbo" role="button" data-slide="prev">
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="right" href="#carousel-info-jumbo" role="button" data-slide="next">
+			<span class="sr-only">Next</span>
+		</a> -->
 	</div>
 
-	<div>{% include flash.html %}</div>
+	<!-- Indicators -->
+	<div class="btn-group btn-group-justified" role="group" aria-label="...">
+		<a href="#" data-target="#carousel-info-jumbo" data-slide-to="0" class="btn btn-warning">Free</a>
+		<a href="#" data-target="#carousel-info-jumbo" data-slide-to="1" class="btn btn-primary">Basic</a>
+		<a href="#" data-target="#carousel-info-jumbo" data-slide-to="2" class="btn btn-success">Pro</a>
+	</div>
+</div>
+
+<div class="container">
 
 	<div class="row">
-		<div class="col-md-7">
-			{% include services.html %}
-		</div>
+		
+		<div class="col-sm-4">
+			<div class="panel panel-primary">
 
-		<div class="col-md-5">
-			{% include sidebar.html %}
-			{% include widget-contact.html %}
+				<!-- <div>
+					<img src="/images/ThinkstockPhotos-476997316.jpg" class="img-responsive">
+				</div> -->
+
+				<header class="panel-heading">
+					<h3 class="panel-title">Free</h3>
+				</header>
+				<div class="table-responsive">
+					<table class="table table-striped">
+						<tbody>
+							<tr><td>cell</td></tr>
+							<tr><td>cell</td></tr>
+							<tr><td>cell</td></tr>
+							<tr><td>cell</td></tr>
+							<tr><td>cell</td></tr>
+						</tbody>
+					</table>
+				</div>
+
+			</div>
+		</div>
+		<div class="col-sm-4">
+			<div class="panel panel-primary">
+				<header class="panel-heading">
+					<h3 class="panel-title">Basic</h3>
+				</header>
+				<div class="table-responsive">
+					<table class="table table-striped">
+						<tbody>
+							<tr><td>cell</td></tr>
+							<tr><td>cell</td></tr>
+							<tr><td>cell</td></tr>
+							<tr><td>cell</td></tr>
+							<tr><td>cell</td></tr>
+						</tbody>
+					</table>
+				</div>
+
+			</div>
+		</div>
+		<div class="col-sm-4">
+			<div class="panel panel-primary">
+				<header class="panel-heading">
+					<h3 class="panel-title">Pro</h3>
+				</header>
+				<div class="table-responsive">
+					<table class="table table-striped">
+						<tbody>
+							<tr><td>cell</td></tr>
+							<tr><td>cell</td></tr>
+							<tr><td>cell</td></tr>
+							<tr><td>cell</td></tr>
+							<tr><td>cell</td></tr>
+						</tbody>
+					</table>
+				</div>
+
+			</div>
 		</div>
 
 	</div>
+
+
+	<div class="row">
+		<div class="col-sm-5">
+			<p class="lead">
+				Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+			</p>
+		</div>
+		<div class="col-sm-7">
+
+			Free
+			<div class="progress">
+				<div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+					<span class="sr-only">40% Complete (success)</span>
+				</div>
+			</div>
+
+			Basic
+			<div class="progress">
+				<div class="progress-bar progress-bar-primary progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+					<span class="sr-only">20% Complete</span>
+				</div>
+			</div>
+
+			Pro
+			<div class="progress">
+				<div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
+					<span class="sr-only">20% Complete</span>
+				</div>
+			</div>
+			
+		</div>
+	</div>
+
+</div>
+
+<div id="otherJumbo" class="jumbotron jumbo-parallax" style="background-image: url('/images/ThinkstockPhotos-476997316.jpg')">
+	<h1 class="text-center">
+		&nbsp;
+	</h1>
+</div>
+
+<div class="container">
+	
+	<header class="page-header">
+		<h3 id="qa">Q & A</h3>
+	</header>
+
+
+	<div class="row">
+		<div class="col-sm-7">
+			<blockquote>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+				<footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+			</blockquote>
+		</div>
+		<div class="col-sm-5">
+			Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</div>
+	</div>
+
+	<hr>
+
+	<div class="row">
+		<div class="col-sm-7">
+			<blockquote>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+				<footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+			</blockquote>
+		</div>
+		<div class="col-sm-5">
+			Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</div>
+	</div>
+
+	<hr>
+
+	<div class="row">
+		<div class="col-sm-7">
+			<blockquote>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+				<footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+			</blockquote>
+		</div>
+		<div class="col-sm-5">
+			Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</div>
+	</div>
+
+	<hr>
+
+	<div class="row">
+		<div class="col-sm-7">
+			<blockquote>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+				<footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+			</blockquote>
+		</div>
+		<div class="col-sm-5">
+			Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</div>
+	</div>
+
 
 </div>
