css images baseurl?

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ layout: default
 
 </div>
 
-<div id="otherJumbo" class="jumbotron jumbo-parallax" style="background-image: url('/images/ThinkstockPhotos-476997316.jpg')">
+<div id="otherJumbo" class="jumbotron jumbo-parallax" style="background-image: url('{{ site.baseurl }}/images/ThinkstockPhotos-476997316.jpg')">
 	<h1 class="text-center">
 		&nbsp;
 	</h1>
