--- a/index.html
+++ b/index.html
@@ -2,25 +2,61 @@
 layout: default
 ---
 
+
+<div id="mainJumbo" class="jumbotron jumbo-parallax">
+	<div class="container">
+		<h1 class="text-center">
+			Freedom To <em>Go</em>
+		</h1>
+
+		<p class="text-center">
+		<a href="#" class="btn btn-lg btn-primary">
+			Take Action
+		</a>
+		</p>
+
+	</div>
+
+</div>
+
+
 <div class="container">
 	<div class="row">
-		<div class="col-md-5 col-md-push-7">
+		<div class="col-lg-5 col-lg-push-7 col-md-6 col-md-push-6">
 			<div class="thumbnail">
 				<div class="embed-responsive embed-responsive-16by9">
 					<iframe src="https://www.youtube.com/embed/4ZJaKj2Qi1c" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
-		<div class="col-md-7 col-md-pull-5">
+		<div class="col-lg-7 col-lg-pull-5 col-md-6 col-md-pull-6">
 
-			<h2 class="">{{site.tagline}}</h2>
+			<h2 class="">
+				{{site.tagline}}<br>
+				<small>We Are Here</small>
+			</h2>
 
 			<p class="lead">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				As our residents and businesses have flourished, transportation in Hillsborough County has reached a critical junction. Now we have the opportunity to come together as a community and decide what our transportation future will look like. 
+			</p>
+
+			<p class="lead">
+				There are essentially three realistic paths before us, and before we choose, it will help to know what each potential future could look like. Our hope is that we can coalesce around a vision that allows our county to continue flourishing well into the future.
 			</p>
 
 		</div>
 	</div>
+
+	<h3 class="text-center">
+		The Paths Before Us
+	</h3>
+
+	<ul class="nav nav-tabs nav-justified">
+		<li><a href="#" data-target="#carousel-info-jumbo" data-slide-to="0" class="">Stay The Course</a></li>
+		<li><a href="#" data-target="#carousel-info-jumbo" data-slide-to="1" class="">Address Our Challenges</a></li>
+		<li><a href="#" data-target="#carousel-info-jumbo" data-slide-to="2" class="">Solve The Problem</a></li>
+	</ul>
+
 </div>
 
 
@@ -33,72 +69,49 @@ layout: default
 			<div id="item0" class="item active">
 				<div class="container">
 
-					<h1>Free</h1>
-					<div class="row">
-						<div class="col-xs-7">
-							<p class="lead">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							</p>
-							<a href="#" class="btn btn-warning btn-lg">Take Action</a>
-						</div>
-						<div class="col-xs-5">
-							<ul class="lead">
-								<li>Something</li>
-								<li>Something</li>
-								<li>Something</li>
-								<li>Something</li>
-								<li>Something</li>
-							</ul>
-						</div>
+					<div class="page-header">
+						<h2 class="text-center">
+							Stay The Course<br>
+							<small>We do not raise any additional funding for transportation.</small>
+						</h2>
 					</div>
 
+					<p class="lead">
+						On this path, we will need to pull money from other programs and services to address the growing backlog of transportation needs. Congestion will likely continue, and quality of life will decrease as other programs lose funding.
+					</p>
 					
 				</div>
 			</div>
 
 			<div id="item1" class="item">
 				<div class="container">
-					<h1>Basic</h1>
-					<div class="row">
-						<div class="col-xs-7">
-							<p class="lead">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							</p>
-							<a href="#" class="btn btn-primary btn-lg">Take Action</a>
-						</div>
-						<div class="col-xs-5">
-							<ul class="lead">
-								<li>Something</li>
-								<li>Something</li>
-								<li>Something</li>
-								<li>Something</li>
-								<li>Something</li>
-							</ul>
-						</div>
+					<div class="page-header">
+						<h2 class="text-center">
+							Address Our Challenges<br>
+							<small>We invest moderately in our transportation future.</small>
+						</h2>
 					</div>
+
+					<p class="lead">
+						On this path, we will raise enough additional funding to address the current backlog of transportation issues facing our county. Mainly, this will focus on road resurfacing and widening, bike lanes, and strategic bus system improvements. 
+					</p>
+
 				</div>
 			</div>
 
 			<div id="item2" class="item">
 				<div class="container">
-					<h1>Pro</h1>
-					<div class="row">
-						<div class="col-xs-7">
-							<p class="lead">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							</p>
-							<a href="#" class="btn btn-success btn-lg">Take Action</a>
-						</div>
-						<div class="col-xs-5">
-							<ul class="lead">
-								<li>Something</li>
-								<li>Something</li>
-								<li>Something</li>
-								<li>Something</li>
-								<li>Something</li>
-							</ul>
-						</div>
+					<div class="page-header">
+						<h2 class="text-center">
+							Solve The Problem<br>
+							<small>We invest fully in our transportation future.</small>
+						</h2>
 					</div>
+
+					<p class="lead">
+						On this path, we will raise enough transportation funding to address all current needs and create new transportation systems like Bus Rapid Transit and Light Rail that will reduce congestion long-term and be able to handle our growing population.
+					</p>
+
 				</div>
 			</div>
 
@@ -113,12 +126,6 @@ layout: default
 		</a> -->
 	</div>
 
-	<!-- Indicators -->
-	<div class="btn-group btn-group-justified" role="group" aria-label="...">
-		<a href="#" data-target="#carousel-info-jumbo" data-slide-to="0" class="btn btn-warning">Free</a>
-		<a href="#" data-target="#carousel-info-jumbo" data-slide-to="1" class="btn btn-primary">Basic</a>
-		<a href="#" data-target="#carousel-info-jumbo" data-slide-to="2" class="btn btn-success">Pro</a>
-	</div>
 </div>
 
 <div class="container">
@@ -126,14 +133,14 @@ layout: default
 	<div class="row">
 		
 		<div class="col-sm-4">
-			<div class="panel panel-primary">
+			<div class="panel panel-warning">
 
 				<!-- <div>
 					<img src="/images/ThinkstockPhotos-476997316.jpg" class="img-responsive">
 				</div> -->
 
 				<header class="panel-heading">
-					<h3 class="panel-title">Free</h3>
+					<h3 class="panel-title">Stay The Course</h3>
 				</header>
 				<div class="table-responsive">
 					<table class="table table-striped">
@@ -152,7 +159,7 @@ layout: default
 		<div class="col-sm-4">
 			<div class="panel panel-primary">
 				<header class="panel-heading">
-					<h3 class="panel-title">Basic</h3>
+					<h3 class="panel-title">Address Our Challenges</h3>
 				</header>
 				<div class="table-responsive">
 					<table class="table table-striped">
@@ -169,9 +176,9 @@ layout: default
 			</div>
 		</div>
 		<div class="col-sm-4">
-			<div class="panel panel-primary">
+			<div class="panel panel-success">
 				<header class="panel-heading">
-					<h3 class="panel-title">Pro</h3>
+					<h3 class="panel-title">Solve The Problem</h3>
 				</header>
 				<div class="table-responsive">
 					<table class="table table-striped">
@@ -234,63 +241,31 @@ layout: default
 <div class="container">
 	
 	<header class="page-header">
-		<h3 id="qa">Q & A</h3>
+		<h3 id="questions">
+			Common Questions<br>
+			<small>(We know you’re asking them.)</small>
+		</h3>
 	</header>
 
 
+	{% for faq in site.data.questions %}
+
 	<div class="row">
 		<div class="col-sm-7">
 			<blockquote>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-				<footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+				<p>
+					{{ faq.question }}
+				</p>
+				<!-- <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer> -->
 			</blockquote>
 		</div>
 		<div class="col-sm-5">
-			Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			{{ faq.answer }}
 		</div>
 	</div>
 
 	<hr>
-
-	<div class="row">
-		<div class="col-sm-7">
-			<blockquote>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-				<footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
-			</blockquote>
-		</div>
-		<div class="col-sm-5">
-			Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</div>
-	</div>
-
-	<hr>
-
-	<div class="row">
-		<div class="col-sm-7">
-			<blockquote>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-				<footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
-			</blockquote>
-		</div>
-		<div class="col-sm-5">
-			Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</div>
-	</div>
-
-	<hr>
-
-	<div class="row">
-		<div class="col-sm-7">
-			<blockquote>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-				<footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
-			</blockquote>
-		</div>
-		<div class="col-sm-5">
-			Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</div>
-	</div>
+	{% endfor %}
 
 
 </div>
