--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ layout: default
 
 </div>
 
-<div id="paths" class="jumbotron jumbo-parallax wow fadeIn" style="background-image: url('{{ site.baseurl }}/images/ThinkstockPhotos-494419003.jpg')">
+<div id="paths" class="jumbotron jumbo-parallax wow fadeIn" style="background-image: url('{{ site.baseurl }}/images/train.jpg')">
 	<h2 class="text-center">
 		3 Transportation Pathways
 	</h2>
@@ -157,7 +157,7 @@ layout: default
 
 </div>
 
-<div class="jumbotron jumbo-parallax wow fadeIn" style="background-image: url('{{ site.baseurl }}/images/ThinkstockPhotos-168504675.jpg'); background-position: center center">
+<div class="jumbotron jumbo-parallax wow fadeIn" style="background-image: url('{{ site.baseurl }}/images/bikes.jpg'); background-position: center center">
 	<h1 class="text-center">
 		&nbsp;
 	</h1>
