--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <div id="mainJumbo" class="jumbotron wow fadeIn">
 	<div class="container">
 		<h1 class="text-center">
-			It’s our future. 
+			It’s our future...
 		</h1>
 
 		<p class="text-center">
