--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
 		<div class="col-lg-5 col-lg-push-7 col-md-6 col-md-push-6 wow slideInRight">
 			<div class="thumbnail">
 				<div class="embed-responsive embed-responsive-16by9">
-					<iframe src="https://www.youtube.com/embed/4ZJaKj2Qi1c" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/4ZJaKj2Qi1c?rel=0" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
