larger font, panel colors

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ layout: default
 	<div class="row">
 		
 		<div class="col-md-4 wow fadeIn" data-wow-delay="0s">
-			<div class="panel panel-default">
+			<div class="panel panel-important panel-1">
 
 				<header class="panel-heading">
 					<h3 class="panel-title">Stay The Course</h3>
@@ -92,7 +92,7 @@ layout: default
 			</div>
 		</div>
 		<div class="col-md-4 wow fadeIn" data-wow-delay="1s">
-			<div class="panel panel-default">
+			<div class="panel panel-important panel-2">
 				<header class="panel-heading">
 					<h3 class="panel-title">Address Our Challenges</h3>
 				</header>
@@ -122,7 +122,7 @@ layout: default
 			</div>
 		</div>
 		<div class="col-md-4 wow fadeIn" data-wow-delay="2s">
-			<div class="panel panel-default">
+			<div class="panel panel-important panel-3">
 				<header class="panel-heading">
 					<h3 class="panel-title">Solve The Problem</h3>
 				</header>
