--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@ layout: default
 ---
 
 <div id="mainJumbo" class="jumbotron wow fadeIn">
-	<div class="container">
+	<div class="container container-lg">
 		<h1 class="text-center">
 			It’s our future...
 		</h1>
 
 		<p class="text-center">
-			<a href="#paths" class="btn btn-xl btn-primary to-paths">
+			<a href="#paths" id="mainBtn" class="btn btn-xl btn-primary to-paths">
 				How will we go?
 			</a>
 		</p>
@@ -17,54 +17,53 @@ layout: default
 	</div>
 </div>
 
-<section class="container">
+<section class="container container-lg">
 	<h2 class="wow slideInLeft">
 		Where Are We Now?
 	</h2>
-	<div class="row">
-		<div class="col-lg-5 col-lg-push-7 col-md-6 col-md-push-6 wow slideInRight">
-			<div class="thumbnail">
-				<div class="embed-responsive embed-responsive-16by9">
-					<iframe src="https://www.youtube.com/embed/4ZJaKj2Qi1c?rel=0" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-7 col-lg-pull-5 col-md-6 col-md-pull-6">
+	<p class="lead wow slideInLeft">
+		As our residents and businesses have flourished, transportation in Hillsborough County has reached a critical junction. Now we have the opportunity to come together as a community and decide what our transportation future will look like. 
+	</p>
 
-			<p class="lead wow slideInLeft">
-				As our residents and businesses have flourished, transportation in Hillsborough County has reached a critical junction. Now we have the opportunity to come together as a community and decide what our transportation future will look like. 
-			</p>
+	<p class="lead wow slideInLeft">
+		With three realistic paths before us, it is helpful to know what each potential future could look like. Our hope is that we can coalesce around a vision that allows our county to continue flourishing well into the future.
+	</p>
 
-			<p class="lead wow slideInLeft">
-				With three realistic paths before us, it is helpful to know what each potential future could look like. Our hope is that we can coalesce around a vision that allows our county to continue flourishing well into the future.
-			</p>
-
-			<p class="lead wow slideInLeft">
-				Without further ado…
-			</p>
-
-		</div>
-	</div>
+	<p class="lead wow slideInLeft">
+		Without further ado…
+	</p>
 </section>
 
-<div id="paths" class="jumbotron jumbo-parallax wow fadeIn" style="background-image: url('{{ site.baseurl }}/images/train.jpg')">
-	<h2 class="text-center">
-		3 Transportation Pathways
-	</h2>
+<div id="paths" class="jumbotron jumbo-parallax wow fadeIn">
+	<div class="container container-lg">
+		<h2 class="text-center">
+			3 Transportation Pathways
+		</h2>
+	</div>
 </div>
 
-<section class="container">
+<section class="container container-lg">
 	<div class="row">
 		{% for path in site.data.paths %}
 		<div class="col-md-4 wow fadeIn" data-wow-delay="{{ forloop.index }}s">
 			<div class="panel panel-important panel-{{ forloop.index }}">
 				<header class="panel-heading">
-					<h3 class="panel-title">{{ path.title }}</h3>
+					<h3 class="panel-title text-center">{{ path.title }}</h3>
 				</header>
 				<div class="panel-body">
-					<p class="lead">
-						<em>{{ path.headline }}</em>
-					</p>
+					<div class="media media-lg">
+						<div class="media-left text-icon-{{ forloop.index }}">
+							<span class="fa-stack fa-lg media-object">
+								<i class="fa fa-square-o fa-stack-2x"></i>
+								<i class="fa fa-{{ path.icon }} fa-stack-1x"></i>
+							</span>
+						</div>
+						<div class="media-body">
+							<h4 class="media-heading text-icon-{{ forloop.index }}">
+								<em>{{ path.headline }}</em>
+							</h4>
+						</div>
+					</div>
 					{{ path.body }}
 				</div>
 				<div class="table-responsive">
@@ -82,13 +81,15 @@ layout: default
 	</div>
 </section>
 
-<div class="jumbotron jumbo-parallax wow fadeIn" style="background-image: url('{{ site.baseurl }}/images/bikes.jpg'); background-position: center center">
-	<h1 class="text-center">
-		&nbsp;
-	</h1>
+<div id="bikes" class="jumbotron jumbo-parallax wow fadeIn">
+	<div class="container container-lg">
+		<h1 class="text-center">
+			&nbsp;
+		</h1>
+	</div>
 </div>
 
-<section class="container">
+<section class="container container-lg">
 	<header class="page-header wow fadeIn">
 		<h3 id="questions">
 			Common Questions
