full height jumbos

--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 layout: default
 ---
 
-<div id="mainJumbo" class="jumbotron wow fadeIn">
+<section id="mainJumbo" class="jumbotron full-height">
 	<div class="container container-lg">
-		<h1 class="text-center">
+		<h1 class="text-center wow fadeIn">
 			It’s our future...
 		</h1>
 
 		<p class="text-center">
-			<a href="#paths" id="mainBtn" class="btn btn-xl btn-primary to-paths">
+			<a href="#whereWeAre" id="mainBtn" class="btn btn-xl btn-primary to-wwa wow fadeIn" data-wow-delay="1s">
 				How will we go?
 			</a>
 		</p>
 
 	</div>
-</div>
+</section>
 
-<section class="container container-lg">
-	<h2 class="wow slideInLeft">
+<section id="whereWeAre" class="container container-lg full-height">
+	<h2 class="wow slideInRight">
 		Where Are We Now?
 	</h2>
 	<p class="lead wow slideInLeft">
@@ -32,12 +32,18 @@ layout: default
 	<p class="lead wow slideInLeft">
 		Without further ado…
 	</p>
+
+	<p class="text-center lead wow fadeIn" data-wow-delay="1s">
+		<a href="#paths" class="btn btn-lg btn-primary to-paths" >
+			Continue...
+		</a>
+	</p>
 </section>
 
 <div id="paths" class="jumbotron jumbo-parallax wow fadeIn">
 	<div class="container container-lg">
 		<h2 class="text-center">
-			3 Transportation Pathways
+			3 Transportation Pathways<br>
 		</h2>
 	</div>
 </div>
