--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@ layout: default
 </section>
 
 <section id="whereWeAre" class="container container-lg full-height">
-	<h2 class="wow slideInRight">
+	<h2 class="wow fadeInRight">
 		Where Are We Now?
 	</h2>
-	<p class="lead wow slideInLeft">
+	<p class="lead wow fadeInLeft">
 		As our residents and businesses have flourished, transportation in Hillsborough County has reached a critical junction. Now we have the opportunity to come together as a community and decide what our transportation future will look like. 
 	</p>
 
-	<p class="lead wow slideInLeft">
+	<p class="lead wow fadeInLeft">
 		With three realistic paths before us, it is helpful to know what each potential future could look like. Our hope is that we can coalesce around a vision that allows our county to continue flourishing well into the future.
 	</p>
 
-	<p class="lead wow slideInLeft">
+	<p class="lead wow fadeInLeft">
 		Without further ado…
 	</p>
 
@@ -104,7 +104,7 @@ layout: default
 	</header>
 	{% for faq in site.data.questions %}
 	<div class="row">
-		<div class="col-sm-7 wow slideInLeft">
+		<div class="col-sm-7 wow fadeInLeft">
 			<blockquote>
 				<p>
 					{{ faq.question }}
@@ -116,6 +116,6 @@ layout: default
 			{{ faq.answer }}
 		</div>
 	</div>
-	<hr class="wow slideInRight">
+	<hr class="wow fadeInRight">
 	{% endfor %}
 </section>
