questions header to jumbo

--- a/index.html
+++ b/index.html
@@ -87,21 +87,16 @@ layout: default
 	</div>
 </section>
 
-<div id="bikes" class="jumbotron jumbo-parallax wow fadeIn">
+<div id="questions" class="jumbotron jumbo-parallax wow fadeIn">
 	<div class="container container-lg">
-		<h1 class="text-center">
-			&nbsp;
-		</h1>
+		<h2 class="text-center">
+			Common Questions<br>
+			<small>(We know you’re asking them.)</small>
+		</h2>
 	</div>
 </div>
 
 <section class="container container-lg">
-	<header class="page-header wow fadeIn">
-		<h3 id="questions">
-			Common Questions
-			<small>(We know you’re asking them.)</small>
-		</h3>
-	</header>
 	{% for faq in site.data.questions %}
 	<div class="row">
 		<div class="col-sm-7 wow fadeInUp">
