renamed header to nav

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 	</div>
 </section>
 
-<section id="whereWeAre" class="container container-lg full-height">
+<section id="whereWeAre" class="container container-lg ">
 	<h2 class="wow fadeInDown">
 		Where Are We Now?
 	</h2>
