latest changes from Shaun

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section id="mainJumbo" class="jumbotron full-height">
+<section id="mainJumbo" class="jumbotron height height-full">
 	<div class="container container-lg">
 		<h1 class="text-center wow fadeIn">
 			It’s our future...
@@ -13,11 +13,10 @@ layout: default
 				How will we go?
 			</a>
 		</p>
-
 	</div>
 </section>
 
-<section id="whereWeAre" class="container container-lg ">
+<section id="whereWeAre" class="container container-lg">
 	<h2 class="wow fadeInDown">
 		Where Are We Now?
 	</h2>
@@ -29,19 +28,10 @@ layout: default
 		With three realistic paths before us, it is helpful to know what each potential future could look like. Our hope is that we can coalesce around a vision that allows our county to continue flourishing well into the future.
 	</p>
 
-	<p class="lead wow fadeInUp">
-		Without further ado…
-	</p>
-
-	<p class="text-center lead wow fadeIn" data-wow-delay="1s">
-		<a href="#paths" class="btn btn-lg btn-primary to-paths" >
-			Continue...
-		</a>
-	</p>
 </section>
 
-<div id="paths" class="jumbotron jumbo-parallax wow fadeIn">
-	<div class="container container-lg">
+<div id="paths" class="jumbotron jumbo-parallax height height-half wow fadeIn">
+	<div class="container">
 		<h2 class="text-center">
 			3 Transportation Pathways<br>
 		</h2>
@@ -87,8 +77,8 @@ layout: default
 	</div>
 </section>
 
-<div id="questions" class="jumbotron jumbo-parallax wow fadeIn">
-	<div class="container container-lg">
+<div id="faqs" class="jumbotron jumbo-parallax height height-half wow fadeIn">
+	<div class="container">
 		<h2 class="text-center">
 			Common Questions<br>
 			<small>(We know you’re asking them.)</small>
