--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 
 <div class="container">
 
-	<ul class="timeline">
+	<ul class="timeline list-unstyled">
 
 		{% for post in site.posts %}
 
@@ -27,7 +27,7 @@ layout: default
 		{% endcapture %}
 
 		{% if theyear != thisiteryear %}
-		<li id="year{{ post.date | date: '%Y' }}" class="wow fadeIn date-stamp">
+		<li id="year{{ post.date | date: '%Y' }}" class="hidden-xs hidden-sm wow fadeIn date-stamp">
 			<div class="timeline-badge info">{{ theyear }}</div>
 		</li>
 		{% endif %}
