--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@ layout: default
 	<div class="container">
 		<h1 class="text-center">
 			<small>Development of </small><br>
-			<abbr title="Transportation for Economic Development">TED</abbr>/GO Hillsborough
+			<abbr title="Transportation for Economic Development" data-toggle="tooltip" data-placement="bottom">TED</abbr>/GO Hillsborough
 		</h1>
 	</div>
 </div>
 
 
 <div class="container">
+
+	<!-- Modal -->
+	<div class="modal fade" id="defaultModal" tabindex="-1" role="dialog" aria-labelledby="defaultModalLabel">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content"></div>
+		</div>
+	</div>
+	<!-- <a href="{{ site.baseurl }}/modals/test" data-toggle="modal" data-target="#defaultModal">Click me</a> -->
+
 
 	<ul class="timeline list-unstyled">
 
@@ -44,9 +53,9 @@ layout: default
 				<div class="timeline-heading">
 					<h4 class="timeline-title">
 						{{ post.date | date: "%B %-d, %Y" }}
-						{% if post.title != '1' %}
+						{% if post.subtitle != '' %}
 						<br>
-						<small>{{ post.title }}</small>
+						<small>{{ post.subtitle }}</small>
 						{% endif %}
 					</h4>
 				</div>
