--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: default
 		{% endcapture %}
 
 		{% if theyear != thisiteryear %}
-		<li id="year{{ post.date | date: '%Y' }}" class="hidden-xs hidden-sm wow fadeIn date-stamp">
+		<li id="year{{ post.date | date: '%Y' }}" class="hidden-xs hidden-sm date-stamp">
 			<div class="timeline-badge info">{{ theyear }}</div>
 		</li>
 		{% endif %}
