--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
 <div class="jumbotron" id="mainJumbo">
 	<div class="container">
 		<h1 class="text-center">
-			<small>Development of </small><br>
-			<abbr title="Transportation for Economic Development" data-toggle="tooltip" data-placement="bottom">TED</abbr>/GO Hillsborough
+			<small>Actions on the</small><br>
+			Transportation Initiative
 		</h1>
 	</div>
 </div>
